packages/common-ui/src/components/DiscreteProgress.module.css
.progress {
	display: flex;
	align-items: stretch;
    justify-content: space-between;
    min-height: 1em;

    &:not(.vertical) > :not(:last-child) {
        margin-right: 0.333em;
    }
}

.vertical {
    flex-direction: column-reverse;
    min-width: 1em;
    
    > :not(:last-child) {
        margin-top: 0.333em;
    }

    .block {
        flex-direction: column;
    }
}

.block {
    flex: 1;
	border-radius: 0.25em;
    corner-shape: squircle;
	background: var(--energy-dark);
    position: relative;
    display: flex;
    align-items: flex-end;
    overflow: hidden;
}

.blockActive {
	background: var(--energy-light);
}

.decayProgress {
    color: var(--danger-mid)
}

